<resources>
    <string name="app_name">UkrainianBanknoteViewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_btn_search">Почати</string>
    <string name="main_btn_info">Інфо</string>
    <string name="main_btn_exit">Вихід</string>
    <string name="search_filter">Фільтри</string>
    <string name="info_text">This application was created by the Student of National University Zaporizhzhia Polytechnic Arthur LordArthurFrost Moroz.</string>
    <string name="info_back">Повернутись</string>
    <string name="bottom_nav_random">Random</string>
    <string name="bottom_nav_catalogue">Catalogue</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_info">Info</string>
    <string name="search_example">Наприклад, 1 гривня 1994</string>
    <string name="tvfilterDialogDenomination">Номінал:</string>
    <string name="tvfilterDialogPrintYear">Рік створення:</string>
    <string name="tvfilterDialogDate">Дата випуску:</string>
    <string name="tvfilterDialogSize">Розмір:</string>
    <string name="tvfilterDialogMemorable">Пам\'ятна:</string>
    <string name="tvfilterDialogTurnover">Ще у обігу:</string>
    <string name="btnfilterDialogAccept">Застосувати</string>
    <string name="btnfilterDialogDecline">Зкинути</string>
    <string name="tvfilterDialogTitle">Налаштуйте фільтри</string>
    <string name="tvfilterDialogType">Тип:</string>
    <string name="tvfilterDialogIsHryvnya">Гривня:</string>
</resources>