<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.FragmentEnter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnmainstart"
            style="@style/Buttons"
            android:text="@string/main_btn_search" />

        <Button
            android:id="@+id/btnmaininfo"
            style="@style/Buttons"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/main_btn_info" />

        <Button
            android:id="@+id/btnmainexit"
            style="@style/Buttons"
            android:text="@string/main_btn_exit" />
    </LinearLayout>


</LinearLayout>
